--- a/src/progressbar/templates/circular-bar.component.html
+++ b/src/progressbar/templates/circular-bar.component.html
@@ -1,19 +1,7 @@
-<svg #svg class="progress-circular" 
-    xmlns="http://www.w3.org/2000/svg" 
-    xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" 
-    viewBox="0 0 100 100" preserveAspectRatio="none"
-    role="progressbar"
-    aria-valuemin="0"
-    [attr.aria-valuemax]="max"
-    [attr.aria-valuenow]="value">
-    <defs>
-        <linearGradient id="linear" x1="-10%" y1="0%" x2="50%" y2="150%">
-        <stop offset="0%"   stop-color="#0375BE"/>
-        <stop offset="100%" stop-color="cyan"/>
-        </linearGradient>
-    </defs>
-    <circle class="progress-circular__innercircle" cx="50" cy="50" r="46"/>
-    <circle #circle class="progress-circular__circle" cx="50" cy="50" r="46"/>
+<svg #svg class="progress-circular" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+    viewBox="0 0 100 100" preserveAspectRatio="none" role="progressbar" aria-valuemin="0" [attr.aria-valuemax]="max" [attr.aria-valuenow]="value">
+    <circle class="progress-circular__innercircle" cx="50" cy="50" r="46" />
+    <circle #circle class="progress-circular__circle" cx="50" cy="50" r="46" />
     <text #text class="progress-circular__text" id="myTimer" text-anchor="middle" x="50" y="60">
         {{valueInPercent}}%
     </text>
