--- a/src/core/styles/components/toast/_toast-theme.scss
+++ b/src/core/styles/components/toast/_toast-theme.scss
@@ -3,6 +3,16 @@ $component-name: 'igx-toast';
 $components: register-component($components, #{$component-name});
 
 @function igx-toast-theme($background: null, $text-color: null) {
+    @if not($text-color) and $background {
+        $text-color: text-contrast($background);
+    }
+
+    @if $background and lightness($background) > 50 {
+        $background: rgba($background, .7)
+    } @else {
+        $background: rgba($background, .54)
+    }
+
     @return (
         background: $background,
         text-color: $text-color,
@@ -27,19 +37,20 @@ $components: register-component($components, #{$component-name});
     // @debug $this;
 
     %igx-toast-display {
-        display: block;
-        margin: $toast-margin;
         position: fixed;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         left: 50%;
         transform: translate3d(-50%, 0, 0);
-        min-width: $toast-width;
+        margin: $toast-margin;
         padding: $toast-padding;
-        background-color: map-get($this, 'background');
-        border-radius: $toast-border-radius;
-        color: map-get($this, 'text-color');
+        min-width: $toast-width;
         font-size: $toast-font-size;
         line-height: $toast-line-height;
+        color: map-get($this, 'text-color');
+        background-color: map-get($this, 'background');
+        border-radius: $toast-border-radius;
         opacity: 0;
         z-index: 999999;
     }
