Make carousel themeable

--- a/src/core/styles/components/carousel/_carousel-theme.scss
+++ b/src/core/styles/components/carousel/_carousel-theme.scss
@@ -5,12 +5,14 @@ $components: register-component($components, #{$component-name});
 @function igx-carousel-theme(
     $arrow-color:null,
     $arrow-background:null,
-    $indicator-background:null
+    $indicator-background:null,
+    $arrow-shadow: false
 ){
     @return(
         arrow-color:$arrow-color,
         arrow-background:$arrow-background,
-        indicator-background:$indicator-background
+        indicator-background:$indicator-background,
+        disable-shadow: $arrow-shadow
     );
 }
 
@@ -25,11 +27,19 @@ $components: register-component($components, #{$component-name});
     );
 
     $this: extend($default-theme, $theme);
+
     $carousel-arrow-margin: 0 em(16px) !default;
     $carousel-indicators-margin: em(16px) 0 !default;
     $carousel-indicators-padding: 0 !default;
     $carousel-indicator-margin: 0 em(5px) !default;
-    
+    $arrow-shadow: $elevate-1 !default;
+
+    @if map-get($this, 'disable-shadow') {
+        $arrow-shadow: none;
+    }
+
+
+
     %igx-carousel-display {
         display: flex;
         position: relative;
@@ -65,7 +75,7 @@ $components: register-component($components, #{$component-name});
         cursor: pointer;
         background-color: map-get($this, arrow-background);
         border-radius: 50%;
-        box-shadow: $elevate-1;
+        box-shadow: $arrow-shadow;
         outline-style: none;
         transition: opacity .25s ease-out;
 
