--- a/src/core/styles/components/card/_card-theme.scss
+++ b/src/core/styles/components/card/_card-theme.scss
@@ -4,13 +4,31 @@ $components: register-component($components, #{$component-name});
 
 @function igx-card-theme(
     $background: null,
+    $header-text-color: null,
     $subtitle-text-color: null,
     $content-text-color: null,
     $actions-text-color: null
+) {
 
-){
+    @if not($header-text-color) and $background {
+        $header-text-color: text-contrast($background);
+    }
+
+    @if not($actions-text-color) and $background {
+        $actions-text-color: rgba(text-contrast($background), .5);
+    }
+
+    @if not($content-text-color) and $background {
+        $content-text-color: rgba(text-contrast($background), .7);
+    }
+
+    @if not($subtitle-text-color) and $background {
+        $subtitle-text-color: rgba(text-contrast($background), .7);
+    }
+
     @return (
         background: $background,
+        header-text-color: $header-text-color,
         subtitle-text-color:$subtitle-text-color,
         content-text-color:$content-text-color,
         actions-text-color:$actions-text-color
@@ -21,9 +39,10 @@ $components: register-component($components, #{$component-name});
 
     $default-theme: igx-card-theme(
         $background: $white,
-        $subtitle-text-color:igx-color($palette, grays, 600),
-        $content-text-color:igx-color($palette, grays, 600),
-        $actions-text-color:igx-color($palette, grays, 600)
+        $header-text-color: igx-color($palette, grays, 800),
+        $subtitle-text-color: igx-color($palette, grays, 600),
+        $content-text-color: igx-color($palette, grays, 600),
+        $actions-text-color: igx-color($palette, grays, 600)
     );
 
     $this: extend($default-theme, $theme);
@@ -73,6 +92,7 @@ $components: register-component($components, #{$component-name});
         // flex: 1 0 100%;
         flex-basis: 100%;
         padding: $card-heading-padding;
+        color: map-get($this, header-text-color);
     }
 
     %igx-card-header--compact {
@@ -148,7 +168,10 @@ $components: register-component($components, #{$component-name});
     %igx-card-actions-igroup {
         display: flex;
         flex-flow: row nowrap;
-        color: map-get($this, actions-text-color);
+
+        .igx-button--icon {
+            color: map-get($this, actions-text-color);
+        }
     }
 
     %igx-card-actions-igroup--start {
@@ -159,5 +182,3 @@ $components: register-component($components, #{$component-name});
         margin-left: auto;
     }
 }
-
-
