--- a/src/core/styles/components/carousel/_carousel-theme.scss
+++ b/src/core/styles/components/carousel/_carousel-theme.scss
@@ -29,7 +29,7 @@ $components: register-component($components, #{$component-name});
     $carousel-indicators-margin: em(16px) 0 !default;
     $carousel-indicators-padding: 0 !default;
     $carousel-indicator-margin: 0 em(5px) !default;
-    
+
     %igx-carousel-display {
         display: flex;
         position: relative;
@@ -65,7 +65,7 @@ $components: register-component($components, #{$component-name});
         cursor: pointer;
         background-color: map-get($this, arrow-background);
         border-radius: 50%;
-        box-shadow: $elevate-1;
+        box-shadow: igx-elevation($elevations, 1);
         outline-style: none;
         transition: opacity .25s ease-out;
 
@@ -112,7 +112,7 @@ $components: register-component($components, #{$component-name});
             border-radius: 50%;
             background-color: map-get($this, indicator-background);
             transition: transform .25s $ease-in-quad;
-            box-shadow: $elevate-1;
+            box-shadow: igx-elevation($elevations, 1);
 
             &::after {
                 content: '';
