--- a/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
@@ -8,7 +8,7 @@ $components: register-component($components, #{$component-name});
     $toggle-icon-active-color: null,
     $toggle-icon-filtered-color: null,
     $toggle-background: null,
-    $toggle-hover-background: null, 
+    $toggle-hover-background: null,
     $toggle-active-background: null,
     $toggle-filtered-background: null,
 
@@ -62,7 +62,7 @@ $components: register-component($components, #{$component-name});
 
         $menu-background: $white,
         $menu-text-color: igx-color($palette, 'grays', 900),
-        $menu-button-text-color: igx-color($palette, 'accent') 
+        $menu-button-text-color: igx-color($palette, 'accent')
     );
 
     $this: extend($default-theme, $theme);
@@ -73,7 +73,7 @@ $components: register-component($components, #{$component-name});
     $grid-head-icon-padding: rem(4.5px) !default;
 
     $filtering-menu-min-width: 240px;
-    $filtering-menu-shadow: $elevate-8;
+    $filtering-menu-shadow: igx-elevation($elevations, 8);
     $filtering-menu-radius: 4px;
     $filtering-menu-distance-to-toggle: 4px;
 
