fix(nav-drawer): ensure width is set on init, default template typo
Also change default width 280px

--- a/src/navigation-drawer/navigation-drawer.component.html
+++ b/src/navigation-drawer/navigation-drawer.component.html
@@ -1,7 +1,7 @@
 <ng-template #defaultItemsTemplate>
     <div igxDrawerItem [isHeader]="true">Navigation Drawer</div>
     <div igxDrawerItem> Star by adding</div>
-    <div igxDrawerItem> <code>&lt;ng-template igxDrawer>&gt;</code> </div>
+    <div igxDrawerItem> <code>&lt;ng-template igxDrawer&gt;</code> </div>
     <div igxDrawerItem> And some items inside </div>
     <div igxDrawerItem> Style with igxDrawerItem </div>
     <div igxDrawerItem> and igxRipple directives</div>
