--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main">
-    <igx-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open" [miniWidth]="drawerState.miniWidth"
-        [(pin)]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
+    <igx-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open"
+        [(pin)]="drawerState.pin" [position]="drawerState.position">
         <ng-template igxDrawer>
             <nav>
                 <img class="logo" src="images/rsrcs/jsblocks-logo.svg" alt="Ignite UI for Angular Logo">
@@ -33,7 +33,7 @@
             </nav>
         </ng-template>
 
-         <ng-template igxDrawerMini>
+         <ng-template *ngIf="drawerState.miniVariant" igxDrawerMini>
             <nav>
                 <span *ngFor="let item of componentLinks" igxDrawerItem routerLinkActive #rla="routerLinkActive" [active]="rla.isActive" routerLink="{{item.link}}">
                     <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
