--- a/src/core/styles/themes/_palettes.scss
+++ b/src/core/styles/themes/_palettes.scss
@@ -1,4 +1,4 @@
-$default-palette: igx-palette($primary: #1a9bfc, $accent: #e41c77);
+$default-palette: igx-palette($primary: #09f, $accent: #e41c77);
 
 $white: #fff !default;
 $overlay-color: igx-color($default-palette, 'grays') !default;
